Fix zoom layout breaking projects

--- a/src/scss/components/Projects.scss
+++ b/src/scss/components/Projects.scss
@@ -87,7 +87,7 @@
 		}
 
 		@media screen and (min-width: 1100px) {
-			width: calc(100% - 49rem); // Full width - image width + image position
+			width: calc(100% - 50rem); // Full width - image width + image position
 		}
 	}
 
